# cpp-terminal

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  main.cpp
include/commands/: command.hpp
include/core/: file_storage.hpp  gui_shell.hpp  parser.hpp  shell.hpp  virtual_filesystem.hpp
src/commands/: command.cpp
src/core/: file_storage.cpp  gui_shell.cpp  parser.cpp  shell.cpp  virtual_filesystem.cpp
tests/: CMakeLists.txt  VirtualFilesystemTest.cpp
